# dcasim

./: .gitignore  DJIA.txt  LICENSE.md  README.md  SP500.txt  dcasim.py  dividend-stocks.txt  pyproject.toml  utilities.txt
