[tool.poetry]
name = "dcasim"
version = "0.1.0"
description = "Simulate buying and selling stocks using dollar cost averaging"
authors = ["Pete Smoot <petes@alum.mit.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
